--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,6 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical"
+        android:gravity="center"
+
         android:padding="10dp">
 
         <TextView
@@ -23,8 +22,8 @@
             android:layout_marginTop="50dp"
             android:elevation="3dp"
             android:gravity="center_horizontal"
-            android:text="Please Enter Your Credentials"
-            android:textSize="24sp"
+            android:text="User Login"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
 
@@ -36,8 +35,10 @@
             android:layout_marginTop="50dp"
             android:layout_marginRight="25dp"
             android:hint="Username"
+            android:drawableLeft="@drawable/baseline_person_24"
             android:inputType="textEmailAddress"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:textSize="16sp" />
 
 
 
@@ -50,22 +51,28 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="25dp"
             android:hint="Password"
+            android:drawableLeft="@drawable/baseline_lock_24"
             android:inputType="textPassword"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:textSize="16sp" />
+
+
+
+
 
 
         <TextView
-            android:id="@+id/txtForgotPassword"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/txtForgotPassword"
             android:layout_marginTop="10dp"
             android:layout_marginRight="35dp"
             android:elevation="3dp"
             android:layout_gravity="end"
-            android:text="Forgot Password"
+            android:text="Forgot Password?"
             android:textSize="18dp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
 
 
 
@@ -81,6 +88,9 @@
             android:textSize="16sp"
             android:textAllCaps="false"
             android:text="Login" />
+
+
+
 
         <TextView
             android:id="@+id/textViewRegister"
@@ -105,3 +115,13 @@
 
 
 </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
