--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,8 +35,10 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="25dp"
+            android:drawableLeft="@drawable/baseline_person_24"
             android:hint="Enter UserName"
-            android:textSize="25dp" />
+            android:minHeight="48dp"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/editTextEmail"
@@ -46,8 +48,10 @@
             android:layout_marginTop="50dp"
             android:layout_marginRight="25dp"
             android:hint="Enter Your Email"
+            android:drawableLeft="@drawable/baseline_email_24"
             android:inputType="textEmailAddress"
-            android:textSize="25dp" />
+            android:minHeight="48dp"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/editTextPassword"
@@ -57,8 +61,23 @@
             android:layout_marginTop="50dp"
             android:layout_marginRight="25dp"
             android:hint="Enter Your Password"
+            android:drawableLeft="@drawable/baseline_lock_24"
             android:inputType="textPassword"
-            android:textSize="25dp" />
+            android:minHeight="48dp"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/editTextConfirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="25dp"
+            android:hint="Confirm Password"
+            android:drawableLeft="@drawable/baseline_lock_24"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            android:textSize="16sp" />
 
 
 
@@ -71,18 +90,20 @@
             android:layout_marginRight="30dp"
             android:text="Register"
             android:textAllCaps="false"
-            android:textSize="24sp" />
+            android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/loginlink"
+            android:id="@+id/textViewLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:elevation="3dp"
             android:gravity="center"
-            android:text="Already have an account log_in"
+            android:text="Already have an account? log_in"
             android:textSize="15sp"
             android:textStyle="bold" />
+
+
 
 
 
