--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,8 +8,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:id="@+id/rl_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back"
+            android:padding="10dp"
+            android:layout_alignParentStart="true"/>
+
+    </RelativeLayout>
+
 
     <LinearLayout
+        android:layout_below="@id/rl_toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
