--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,6 @@
         android:layout_centerVertical="true"
         android:orientation="vertical"
         android:gravity="center"
-
         android:padding="10dp">
 
         <TextView
@@ -25,8 +24,6 @@
             android:text="User Login"
             android:textSize="20sp"
             android:textStyle="bold" />
-
-
         <EditText
             android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
@@ -34,15 +31,14 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="50dp"
             android:layout_marginRight="25dp"
+            android:maxLines="1"
+            android:singleLine="true"
             android:hint="Username"
             android:drawableLeft="@drawable/baseline_person_24"
+            android:drawablePadding="2dp"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             android:textSize="16sp" />
-
-
-
-
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
@@ -51,16 +47,13 @@
             android:layout_marginTop="20dp"
             android:layout_marginRight="25dp"
             android:hint="Password"
+            android:maxLines="1"
+            android:singleLine="true"
             android:drawableLeft="@drawable/baseline_lock_24"
+            android:drawablePadding="2dp"
             android:inputType="textPassword"
             android:minHeight="48dp"
             android:textSize="16sp" />
-
-
-
-
-
-
         <TextView
 
             android:layout_width="wrap_content"
@@ -73,11 +66,6 @@
             android:text="Forgot Password?"
             android:textSize="18dp"
             android:textStyle="bold" />
-
-
-
-
-
         <Button
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
@@ -88,10 +76,6 @@
             android:textSize="16sp"
             android:textAllCaps="false"
             android:text="Login" />
-
-
-
-
         <TextView
             android:id="@+id/textViewRegister"
             android:layout_width="match_parent"
@@ -104,13 +88,6 @@
             android:textSize="15sp"
             android:textStyle="bold"
             />
-
-
-
-
-
-
-
     </LinearLayout>
 
 
