committing changes : state and district spinner added and functionality change to state

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -43,39 +43,53 @@
             android:layout_width="match_parent"
             android:layout_height="50dp">
 
-            <TextView
+            <AutoCompleteTextView
+                android:id="@+id/edt_select_state"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:textSize="14sp"
+                android:layout_marginEnd="10dp"
                 android:textColor="@color/white"
                 android:background="@drawable/txt_strock_box"
                 android:drawableEnd="@drawable/ic_down_arrow"
                 android:drawablePadding="5dp"
                 android:textStyle="bold"
                 android:singleLine="true"
+                android:inputType="textNoSuggestions"
+                android:textColorHint="@color/white"
+                android:clickable="true"
+                android:focusable="false"
                 android:layout_marginStart="10dp"
                 android:padding="10dp"
-                android:text="Select State"/>
+                android:hint="Select State"/>
 
-            <TextView
+
+            <AutoCompleteTextView
+                android:id="@+id/edt_select_dist"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:clickable="true"
+                android:focusable="false"
+                android:inputType="textNoSuggestions"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:textSize="14sp"
+                android:textColorHint="@color/white"
                 android:background="@drawable/txt_strock_box"
                 android:textColor="@color/white"
+                android:layout_marginStart="10dp"
                 android:drawableEnd="@drawable/ic_down_arrow"
                 android:drawablePadding="5dp"
                 android:textStyle="bold"
                 android:singleLine="true"
                 android:layout_marginEnd="10dp"
                 android:padding="10dp"
-                android:text="Select District"/>
+                android:visibility="gone"
+                android:hint="Select District"/>
 
         </RelativeLayout>
 
