blur image fixed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#FFA726</color>
-    <color name="colorPink">#F6568D</color>
+    <color name="colorPink">#E18B4EEC</color>
 </resources>
