--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -92,6 +92,36 @@
                 android:hint="Select District"/>
 
         </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_taluka_box"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="gone">
+            <AutoCompleteTextView
+                android:id="@+id/edt_select_taluka"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="5dp"
+                android:gravity="center"
+                android:clickable="true"
+                android:focusable="false"
+                android:inputType="textNoSuggestions"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:textSize="14sp"
+                android:textColorHint="@color/white"
+                android:background="@drawable/txt_strock_box"
+                android:textColor="@color/white"
+                android:layout_marginStart="10dp"
+                android:drawableEnd="@drawable/ic_down_arrow"
+                android:drawablePadding="5dp"
+                android:textStyle="bold"
+                android:singleLine="true"
+                android:layout_marginEnd="10dp"
+                android:padding="10dp"
+                android:visibility="visible"
+                android:hint="Select Taluka"/>
+        </RelativeLayout>
 
     </LinearLayout>
 
